<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/green"
        android:padding="20dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_titulo"
            android:gravity="center"
            android:text="@string/titulo"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textColor="@color/black"/>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_convertir"
                android:text="@string/conversor"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_valor"
                android:inputType="number"
                android:hint="Ingrese el valor a convertir"
                android:layout_marginStart="10dp"/>

    </LinearLayout>

    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/de"
                android:text="@string/de"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_marginStart="30dp"
                android:entries="@array/monedas"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/para"
                android:text="@string/para"
                android:textSize="24sp"
                android:textColor="@color/black"/>

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner2"
                android:layout_marginStart="10dp"
                android:entries="@array/monedas"/>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton_convertir"
        android:text="@string/boton"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:gravity="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imagen"
        app:srcCompat="@drawable/money" />

</LinearLayout>